This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-10-19 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/PatternLayout.hh, src/PatternLayout.cpp: 
	replaced PatternLayout implementation: it now preparses the message
	format for quicker layouting and implements format specifiers, 
	e.g. '%-5p'.
	* tests/testPattern.cpp: added tests for format specifiers and more.

2002-10-10 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/threading/MSThreads.hh: added #include<string>

2002-10-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* log4cpp.spec.in: don't require log4cpp for log4cpp-doc.

	* doc/Makefile.am: fix install location.	

	* Makefile.am: use 'rpmbuild' instead of 'rpm'. 

2002-10-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* release as 0.3.2

	* doc/html/index.html: added notes for 0.3.2 and 0.3.2rc5
	
	* configure.in, msvc6/Makefile.am, msvc6/testDLL/Makefile.am,
	msvc6/testMain/Makefile.am, msvc6/testNTEventLog/Makefile.am,
	msvc6/testPattern/Makefile.am: added missing makefiles.

2002-09-26 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/StringUtil.hh: fix compilation problem on Sun CC 5.3 
	(bug #614903).
	
2002-09-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/RemoteSyslogAppender.cpp: fixed log facility in _append(), as
	reported by Derek Atkins.

	* src/PropertyConfiguratorImpl.cpp, src/SimpleConfigurator.cpp:
	multiply syslog facility value by 8.

2002-09-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* log4cpp.spec.in: fix relocatability of log4cpp-devel by patching
	lib/liblog4cpp.la and bin/log4cpp-config in %post. Unfortunately
	this results in 'rpm --verify' reporting these files as modified. 
	
2002-09-15 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* release as 0.3.25rc5
	
	* include/threading/DummyThreads.hh, include/threading/MSThreads.hh,
	include/threading/OmniThreads.hh, include/threading/Pthreads.hh,